feat 💫 : refactor strcuture anc portal fake 2
